started home and fixed some styling mistakes
added scrollbar styling

--- a/talkaboat/src/styles.scss
+++ b/talkaboat/src/styles.scss
@@ -1,7 +1,23 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-
+::-webkit-scrollbar {
+  width: 7.5px;
+  background-color: #64A4FD;
+}
+::-webkit-scrollbar-track {
+  margin-top: 2.6rem;
+  background-color: #13252570;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #4b79a1;
+  border: 1px solid transparent;
+  background-clip: content-box;
+  padding-left: 3px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #4b79a194;
+}
 body {
   @apply ease-in-out duration-500 transition-all;
 }
